--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,90 +14,105 @@
 
 <body>
 
-    <!-- Ratings Section -->
-    <div class="ratings-container">
-        <!-- Free Air Facility Services -->
-        <div class="rating-section">
-            <div class="rating-content">
-                <label class="required">Free Air Facility Services</label>
-                <div class="emoji-rating" data-field="rating_air">
-                    <button type="button" class="emoji-btn" data-value="1">😞</button>
-                    <button type="button" class="emoji-btn" data-value="2">😐</button>
-                    <button type="button" class="emoji-btn" data-value="3">😊</button>
+    <div class="container">
+        <form id="feedbackForm">
+
+            <!-- Phone Number Section -->
+            <div class="form-group">
+                <label for="phone" class="required">Mobile Number</label>
+                <div class="input-with-icon">
+                    <i class="fas fa-mobile-alt"></i>
+                    <input type="tel" id="phone" name="phone" placeholder="Enter your mobile number" required>
                 </div>
-                <p class="helper-text">Pls rate us</p>
-                <input type="hidden" name="rating_air" id="rating_air">
             </div>
-            <div class="upload-section">
-                <label>Image Upload</label>
+
+            <!-- Hidden RO Number -->
+            <input type="hidden" id="ro_number" name="ro_number">
+
+            <!-- Ratings Section -->
+            <div class="ratings-container">
+                <!-- Free Air Facility Services -->
+                <div class="rating-section">
+                    <div class="rating-content">
+                        <label class="required">Free Air Facility Services</label>
+                        <div class="emoji-rating" data-field="rating_air">
+                            <button type="button" class="emoji-btn" data-value="1">😞</button>
+                            <button type="button" class="emoji-btn" data-value="2">😐</button>
+                            <button type="button" class="emoji-btn" data-value="3">😊</button>
+                        </div>
+                        <p class="helper-text">Pls rate us</p>
+                        <input type="hidden" name="rating_air" id="rating_air">
+                    </div>
+                    <div class="upload-section">
+                        <label>Image Upload</label>
+                        <div class="file-input-wrapper">
+                            <input type="file" id="photo_air" name="photo_air" accept="image/*">
+                            <span class="file-btn">Choose File</span>
+                            <i class="fas fa-download"></i>
+                            <i class="fas fa-eye"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Washroom Cleanliness -->
+                <div class="rating-section">
+                    <div class="rating-content">
+                        <label class="required">Washroom Cleanliness</label>
+                        <div class="emoji-rating" data-field="rating_washroom">
+                            <button type="button" class="emoji-btn" data-value="1">😞</button>
+                            <button type="button" class="emoji-btn" data-value="2">😐</button>
+                            <button type="button" class="emoji-btn" data-value="3">😊</button>
+                        </div>
+                        <p class="helper-text">Pls rate us</p>
+                        <input type="hidden" name="rating_washroom" id="rating_washroom">
+                    </div>
+                    <div class="upload-section">
+                        <label>Image Upload</label>
+                        <div class="file-input-wrapper">
+                            <input type="file" id="photo_washroom" name="photo_washroom" accept="image/*">
+                            <span class="file-btn">Choose File</span>
+                            <i class="fas fa-download"></i>
+                            <i class="fas fa-eye"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Fuel Transaction Receipt Upload -->
+            <div class="form-group">
+                <label>Fuel Transaction Receipt Upload</label>
                 <div class="file-input-wrapper">
-                    <input type="file" id="photo_air" name="photo_air" accept="image/*">
+                    <input type="file" id="photo_receipt" name="photo_receipt" accept="image/*">
                     <span class="file-btn">Choose File</span>
                     <i class="fas fa-download"></i>
                     <i class="fas fa-eye"></i>
                 </div>
             </div>
-        </div>
 
-        <!-- Washroom Cleanliness -->
-        <div class="rating-section">
-            <div class="rating-content">
-                <label class="required">Washroom Cleanliness</label>
-                <div class="emoji-rating" data-field="rating_washroom">
-                    <button type="button" class="emoji-btn" data-value="1">😞</button>
-                    <button type="button" class="emoji-btn" data-value="2">😐</button>
-                    <button type="button" class="emoji-btn" data-value="3">😊</button>
-                </div>
-                <p class="helper-text">Pls rate us</p>
-                <input type="hidden" name="rating_washroom" id="rating_washroom">
+            <!-- Text Area -->
+            <div class="form-group">
+                <label for="comment">Tell us more about your experience with us</label>
+                <textarea id="comment" name="comment" rows="5"></textarea>
             </div>
-            <div class="upload-section">
-                <label>Image Upload</label>
-                <div class="file-input-wrapper">
-                    <input type="file" id="photo_washroom" name="photo_washroom" accept="image/*">
-                    <span class="file-btn">Choose File</span>
-                    <i class="fas fa-download"></i>
-                    <i class="fas fa-eye"></i>
-                </div>
+
+            <!-- Disclaimer -->
+            <div class="disclaimer-box">
+                <strong>Disclaimer</strong>
+                <p>The feedback submitted on this form is collected only for service improvement purposes. No personal
+                    information will be shared without consent.</p>
             </div>
-        </div>
-    </div>
 
-    <!-- Fuel Transaction Receipt Upload -->
-    <div class="form-group">
-        <label>Fuel Transaction Receipt Upload</label>
-        <div class="file-input-wrapper">
-            <input type="file" id="photo_receipt" name="photo_receipt" accept="image/*">
-            <span class="file-btn">Choose File</span>
-            <i class="fas fa-download"></i>
-            <i class="fas fa-eye"></i>
-        </div>
-    </div>
+            <!-- Terms Checkbox -->
+            <div class="form-group checkbox-group">
+                <input type="checkbox" id="terms_accepted" name="terms_accepted" required>
+                <label for="terms_accepted">I accept the Terms and Conditions and allow Indian Oil to use my contact
+                    details for reward purposes.</label>
+            </div>
 
-    <!-- Text Area -->
-    <div class="form-group">
-        <label for="comment">Tell us more about your experience with us</label>
-        <textarea id="comment" name="comment" rows="5"></textarea>
-    </div>
-
-    <!-- Disclaimer -->
-    <div class="disclaimer-box">
-        <strong>Disclaimer</strong>
-        <p>The feedback submitted on this form is collected only for service improvement purposes. No personal
-            information will be shared without consent.</p>
-    </div>
-
-    <!-- Terms Checkbox -->
-    <div class="form-group checkbox-group">
-        <input type="checkbox" id="terms_accepted" name="terms_accepted" required>
-        <label for="terms_accepted">I accept the Terms and Conditions and allow Indian Oil to use my contact
-            details for reward purposes.</label>
-    </div>
-
-    <!-- Submit Button -->
-    <button type="submit" id="submitBtn">Submit</button>
-    </form>
-    <div id="message" class="hidden"></div>
+            <!-- Submit Button -->
+            <button type="submit" id="submitBtn">Submit</button>
+        </form>
+        <div id="message" class="hidden"></div>
     </div>
 
     <script src="script.js?v=2"></script>
